# OGC

./: .env.example  .gitignore  API_INTEGRATION.md  DEMO.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  README.md  SETUP.md  TANGIBLE_DEMO.md  TESTING_GUIDE.md  advanced_vault.py  check_any_balance.py  create_ogc_token.py  echo_contract.py  echo_interact.py  fix_wallet.js  fix_wallet_v2.js  full_demo.py  governance_interact.py  governance_sender.py  index.html  ogc_demo.py  package-lock.json  package.json  permanent_wallet.backup.json  permanent_wallet.backup.v2.json  permanent_wallet.json  requirements.txt  sender_contract.py  sender_interact.py  setup.py  simple_approval.teal  simple_contract.py  simple_deploy.js  simple_deploy.py  simple_deploy_multi.py  simple_deployment.json  simple_deposit.js  simple_deposit.py  simple_wallet.js  (+8 more)
ogc-contracts/projects/ogc-contracts/: .algokit.toml  .env  .env.example  .gitignore  Makefile  README.md  TESTNET_DEMO.md  asa_vault.py  build_vault.py  call_release_testnet.py  check_any_balance.py  check_balance_testnet.py  check_contract_balance.py  check_echo_status.py  check_receiver.py  create_ogc_token.py  deploy_echo_testnet.py  deploy_receiver.py  deploy_sender.py  deploy_simple.py  deploy_testnet.py  deploy_vault.py  deploy_with_address.py  deploy_working.py  echo_contract.py  flexible_send.py  full_demo.py  fund_app.py  get_app_address.py  ogc_demo.py  pyproject.toml  send_from_contract.py  send_to_address.py  sender_contract.py  simple_receiver.py  simple_vault.py  test_echo_local.py  test_token.py  test_vault.py  (+5 more)
(+69 files in other folders)
